# nix-sgx-hello-rust

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  buildenv.mk  docker-compose.yml  flake.nix  requirements.txt
.github/workflows/: ci.yml
app/: Cargo.toml
enclave/: Cargo.toml  Makefile  Xargo.toml
xargo/sgx_tstd/: Cargo.toml  build.rs
