[package]
name = "std"
version = "0.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2021"

[lib]
name = "std"
path = "../../rust-sgx-sdk/sgx_tstd/src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["stdio"]
backtrace = ["stdio"]
stdio = []
net = []
pipe = []
thread = []
untrusted_fs = []
untrusted_time = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../rust-sgx-sdk/sgx_types" }
sgx_libc = { path = "../../rust-sgx-sdk/sgx_libc" }
sgx_trts = { path = "../../rust-sgx-sdk/sgx_trts" }
sgx_alloc = { path = "../../rust-sgx-sdk/sgx_alloc" }
sgx_tprotected_fs = { path = "../../rust-sgx-sdk/sgx_tprotected_fs" }
sgx_backtrace_sys = { path = "../../rust-sgx-sdk/sgx_backtrace_sys" }
sgx_demangle = { path = "../../rust-sgx-sdk/sgx_demangle" }
sgx_unwind = { path = "../../rust-sgx-sdk/sgx_unwind" }

[dependencies.hashbrown]
package = "hashbrown_tstd"
path = "../../rust-sgx-sdk/sgx_tstd/hashbrown"
default-features = false
features = ['rustc-dep-of-std']

